# neuralnet-mnist-cpp

./: .gitignore  CMakeLists.txt  README.md  eval.cpp  main.cpp
include/: activations.hpp  dropout.hpp  evaluate.hpp  layer.hpp  layer_dense.hpp  mnist_loader.hpp  neural_network.hpp
src/: activations.cpp  dropout.cpp  evaluate.cpp  layer_dense.cpp  mnist_loader.cpp  neural_network.cpp
src/server/: classifier_server.cpp
ui/: app.js  index.html  styles.css
